--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "commenthider",
-  "title": "CommentHider",
+  "name": "commentnuker",
+  "title": "Comment Nuker",
   "id": "jid1-fd8MU6ExSQoVCQ",
-  "description": "a basic add-on",
-  "author": "",
+  "description": "Hide facebook comments containing tagged people.",
+  "author": "Reslav Hollos",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "1.0"
 }
