--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,10 @@
 , "author": "Reslav Hollos"
 , "description": "Collapse (hide) facebook comments containing tagged people."
 , "permissions": [ "activeTab" ]
+, "background": {
+    "scripts": [ "data/background.js" ]
+  , "persistent": false
+  }
 , "browser_action": {
     "default_icon": "icon.png"
   , "default_title": "Hide all collapsed facebook comments."
