--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,11 @@
 , "manifest_version": 2
 , "author": "Reslav Hollos"
 , "description": "Collapse (hide) facebook comments containing tagged people."
-, "icons": { "64": "icon.png" }
+, "icons": {
+    "16": "icon.png"
+  , "48": "icon.png"
+  , "128": "icon.png"
+  }
 , "permissions": [ "activeTab" ]
 , "background": {
     "scripts": [ "data/background.js" ]
